// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hubs if falsy 1`] = `
<div
  className="route_form layout-row flex-none layout-wrap layout-align-center"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start form_padding"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center"
    >
      <h2
        className="flex-none clip letter_3"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      >
        Add a New Route
      </h2>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Mode of Transport
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name="mot"
          onChange={[Function]}
          options={
            Array [
              "air",
              "rail",
              "ocean",
              "truck",
            ]
          }
          placeholder="Mode of Transport"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          0
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={0}
          onChange={[Function]}
          options={Array []}
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          1
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={1}
          onChange={[Function]}
          options={Array []}
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-align-end-center layout-row"
    >
      <div
        className="flex-none layout-row layout-align-cetner-center"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-cicle-o"
        />
        <p
          className="flex-none no_m"
        >
          Add Stop
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Name
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center input_box_full"
      >
        <input
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-end-center"
  >
    <RoundButton
      active={true}
      back={false}
      className="flex-none"
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass="fa-floppy"
      inverse={false}
      size="small"
      text="Save Route"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <div
      className="flex-5"
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="route_form layout-row flex-none layout-wrap layout-align-center"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start form_padding"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center"
    >
      <h2
        className="flex-none clip letter_3"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      >
        Add a New Route
      </h2>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Mode of Transport
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name="mot"
          onChange={[Function]}
          options={
            Array [
              "air",
              "rail",
              "ocean",
              "truck",
            ]
          }
          placeholder="Mode of Transport"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          0
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={0}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "NAME",
                "value": 7,
              },
            ]
          }
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          1
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={1}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "NAME",
                "value": 7,
              },
            ]
          }
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-align-end-center layout-row"
    >
      <div
        className="flex-none layout-row layout-align-cetner-center"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-cicle-o"
        />
        <p
          className="flex-none no_m"
        >
          Add Stop
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Name
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center input_box_full"
      >
        <input
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-end-center"
  >
    <RoundButton
      active={true}
      back={false}
      className="flex-none"
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass="fa-floppy"
      inverse={false}
      size="small"
      text="Save Route"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <div
      className="flex-5"
    />
  </div>
</div>
`;

exports[`theme if falsy 1`] = `
<div
  className="route_form layout-row flex-none layout-wrap layout-align-center"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start form_padding"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center"
    >
      <h2
        className="flex-none clip letter_3"
        style={
          Object {
            "background": "black",
          }
        }
      >
        Add a New Route
      </h2>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Mode of Transport
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name="mot"
          onChange={[Function]}
          options={
            Array [
              "air",
              "rail",
              "ocean",
              "truck",
            ]
          }
          placeholder="Mode of Transport"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          0
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={0}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "NAME",
                "value": 7,
              },
            ]
          }
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Stop
           
          1
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center"
      >
        <Styled(NamedSelect)
          className="select"
          name={1}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "NAME",
                "value": 7,
              },
            ]
          }
          placeholder="Origin"
          value={
            Object {
              "id": null,
              "value": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-100 layout-align-end-center layout-row"
    >
      <div
        className="flex-none layout-row layout-align-cetner-center"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-cicle-o"
        />
        <p
          className="flex-none no_m"
        >
          Add Stop
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-center form_row"
    >
      <div
        className="flex-100 flex-gt-sm-50 layout-align-start-center"
      >
        <p
          className="flex-none"
        >
          Name
        </p>
      </div>
      <div
        className="flex-100 flex-gt-sm-50 layout-align-end-center input_box_full"
      >
        <input
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-end-center"
  >
    <RoundButton
      active={true}
      back={false}
      className="flex-none"
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass="fa-floppy"
      inverse={false}
      size="small"
      text="Save Route"
      theme={null}
    />
    <div
      className="flex-5"
    />
  </div>
</div>
`;
